# actions

./: .copier-answers.yml  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE.md  README.md  README.qmd  _metadata.yml  _publish.yml  _quarto.yml  index.qmd  justfile  mypy.ini  pyproject.toml
.github/workflows/: release-package.yml
docs/design/: index.qmd  pdf-to-zenodo.qmd
docs/includes/: _contributors.qmd  site-counter.html
src/actions/: cli.py  examples.py  zenodo.py
tests/: test_cli.py  test_zenodo_client.py  test_zenodo_get_record.py
