[project]
name = "actions"
version = "0.1.0"
description = "Python package and GitHub reusable workflows for continuous integration and delivery of Seedcase repositories."
authors = [
  {name = "Signe Kirk Brødbæk", email = "signekb@clin.au.dk" },
  {name = "Luke Johnston", email = "lwjohnst@gmail.com" },
  {name = "Marton Vago", email = "marton.vago95@gmail.com" },
]
maintainers = [
  {name = "Signe Kirk Brødbæk", email = "signekb@clin.au.dk" },
  {name = "Luke Johnston", email = "lwjohnst@gmail.com" },
  {name = "Marton Vago", email = "marton.vago95@gmail.com" },
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]
requires-python = ">=3.12"
dependencies = []

[project.urls]
homepage = "https://actions.seedcase-project.org"
repository = "https://github.com/seedcase-project/actions"
changelog = "https://github.com/seedcase-project/actions/blob/main/CHANGELOG.md"
issues = "https://github.com/seedcase-project/actions/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "commitizen>=4.13.9",
    "genbadge>=1.1.3",
    "jupyter>=1.1.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "quartodoc>=0.11.1",
    "ruff>=0.15.4",
    "types-tabulate>=0.9.0.20241207",
    "typos>=1.44.0",
    "vulture>=2.15",
]
