[project]
name = "actions"
version = "0.5.0"
description = "Python package and GitHub reusable workflows for continuous integration and delivery of Seedcase repositories."
authors = [
  {name = "Signe Kirk Brødbæk", email = "signekb@clin.au.dk" },
  {name = "Luke Johnston", email = "lwjohnst@gmail.com" },
  {name = "Marton Vago", email = "marton.vago95@gmail.com" },
]
maintainers = [
  {name = "Signe Kirk Brødbæk", email = "signekb@clin.au.dk" },
  {name = "Luke Johnston", email = "lwjohnst@gmail.com" },
  {name = "Marton Vago", email = "marton.vago95@gmail.com" },
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]
requires-python = ">=3.12"
dependencies = [
    "cyclopts>=4.20.0",
    "pydantic>=2.13.3",
    "requests>=2.34.2",
]

[project.urls]
homepage = "https://actions.seedcase-project.org"
repository = "https://github.com/seedcase-project/actions"
changelog = "https://github.com/seedcase-project/actions/blob/main/CHANGELOG.md"
issues = "https://github.com/seedcase-project/actions/issues"

[project.scripts]
actions = "actions.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "commitizen>=4.16.4",
    "genbadge>=1.1.3",
    "jupyter>=1.1.1",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "quartodoc>=0.11.1",
    "requests-mock>=1.12.1",
    "ruff>=0.15.15",
    "types-requests>=2.33.0.20260518",
    "types-tabulate>=0.10.0.20260508",
    "typos>=1.48.0",
    "vulture>=2.15",
]
